firmware/build/log/idf_py_stderr_output_71088
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/rmt_pulse_gen.cpp:651:51: error: ignoring attribute 'section (".iram1.3")' because it conflicts with previous 'section (".iram1.1")' [-Werror=attributes]
  651 | bool IRAM_ATTR RmtPulseGenerator::handleTxDoneISR()
      |                                                   ^
In file included from /Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/rmt_pulse_gen.cpp:14:
/Users/sergeybarabash/robo/yarobot_control_unit/firmware/components/pulse_gen/include/rmt_pulse_gen.h:171:20: note: previous declaration here
  171 |     bool IRAM_ATTR handleTxDoneISR();
      |                    ^~~~~~~~~~~~~~~
cc1plus: all warnings being treated as errors
make[2]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/rmt_pulse_gen.cpp.obj] Error 1
make[1]: *** [esp-idf/pulse_gen/CMakeFiles/__idf_pulse_gen.dir/all] Error 2
make: *** [all] Error 2
